--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ html {
 }
 
 a {
-    text-decoration: none;
-    display: flex;
+    text-decoration: none;   
 }
 
 body {
@@ -134,7 +133,7 @@ h1 {
 }
 
 .headline-btn {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight: bold;
     color: #ffffff;
     background-color: rgb(181, 9, 255);
@@ -198,6 +197,7 @@ h1 {
 }
 
 .sec2-p {
+
     color: #ffffff;
     font-size: 1.2rem;
     margin-top: 5rem;
@@ -217,10 +217,10 @@ h1 {
 }
 
 #section3 {
-    height: 50rem;
+    height: 45rem;
     width: 100%;
     background-color: #09090B;
-    transform: translateY(130%);
+    transform: translateY(145%);
 }
 
 #sec3-h3 {
@@ -451,11 +451,13 @@ button {
     padding: 0;
     font-size: large;
     font-family: 'Archivo', sans-serif;
-    display: flex;
     margin: auto;
     margin-top: 3rem;
-    
 
+}
+
+#linkGit {
+    display: flex;
 }
 
 button.learn-more {
@@ -606,22 +608,22 @@ button:hover .button-text {
 /* Section 4 habilidades */
 
 #section4 {
-    height: 40rem;
+    height: 44rem;
     width: 100%;
     background-color:  rgb(0, 0, 0);
-    transform: translateY(140%);
+    transform: translateY(135%);
     text-align: center;
 }
 
 #sec4-h2 h2 {
     color: #ffffff;
-    padding-top: 3rem;
+    
     font-size: 2rem;
 }
 
 #sec4-h2 h3 {
     color: #ffffff;
-    padding-top: 3rem;
+    padding-top: 2rem;
     font-size: 1.5rem;
 }
 
@@ -632,7 +634,7 @@ button:hover .button-text {
     flex-direction: row;
     gap: 8rem;
     justify-content: center;
-    margin-top: 5rem;
+    margin-top: 4rem;
 
 }
 
@@ -735,7 +737,17 @@ button:hover .button-text {
     transform: translate(-50%, -50%);
     user-select: none;
   }
-  
+
+  .items h3 {
+    color: #ffffff;
+    font-size: 1.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-200%);
+  }
+
+
   .items .item {
     position: absolute;
     top: 50%;
@@ -755,11 +767,16 @@ button:hover .button-text {
     height: 100%;
     object-fit: cover;
   }
+
   
   .item.active {
     opacity: 1;
     z-index: 99;
-    box-shadow: 0px 0px 6.563rem -2.188rem #b509ff;
+    
+    animation: pulse 1s infinite;
+    animation-play-state:running;
+    position: static;
+    transition: 0.5s;
   }
   
   .item.prev {
@@ -779,7 +796,7 @@ button:hover .button-text {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 17.188rem;
+    width: 30rem;
     z-index: 100;
   }
   
@@ -832,9 +849,42 @@ button:hover .button-text {
     
   }
 
+  @keyframes pulse {
+    0% {
+        transform: scale(1.1);
+        opacity: 1;
+    }
 
+    
+    /* 10% {
+        transform:  scale(1.2);
+    }
+    20% {
+        transform:  scale(1.3);
+    }
+    30% {
+        transform:  scale(1.4);
+    }
+    40% {
+        transform:  scale(1.4);
+    } */
+    50% {
+        transform: scale(1.3);
+        
+    }
 
-  
+    
+    /* 60% {
+        transform:  scale(1.3);
+    }
+    70% {
+        transform: scale(1.2);
+    } */
+    100% {
+        transform: scale(1.1);
+        opacity: 1;
+    }
+}
 
 
   
