--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 
+.naoSelecionavel {
+    -webkit-touch-callout: none;  /* iPhone OS, Safari */
+    -webkit-user-select: none;    /* Chrome, Safari 3 */
+    -khtml-user-select: none;     /* Safari 2 */
+    -moz-user-select: none;       /* Firefox */
+    -ms-user-select: none;        /* IE10+ */
+    user-select: none;            /* Possível implementação no futuro */
+    /* cursor: default; */
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -20,12 +30,14 @@ a {
 body {
     background: rgb(0, 0, 0);
     transition: 1s;
+    box-sizing: border-box;
     
 
 
 
 }
 
+/* Cabecalho */
 
 header {
     background-color: rgb(5, 5, 5);
@@ -53,6 +65,33 @@ nav {
 
 
 }
+
+/* Modal NavMenu */
+
+#modalContato {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    margin: auto;
+    flex-direction: column;
+    gap: 3rem;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background: #000000;
+    top: -100%;
+    transition: 350ms;
+    
+}
+
+#modalContato a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 2rem;
+    
+}
+
 
 
 
@@ -92,6 +131,7 @@ nav {
 
 }
 
+/* conteudo principal */
 main {
 
     display: flex;
@@ -157,6 +197,7 @@ h1 {
 }
 
 
+
 #img-aside {
     width: 42rem;
     height: 40rem;
@@ -168,6 +209,7 @@ h1 {
 
 }
 
+  /* Sessao sobre mim */
 #section2 {
 
     background-color: #09090B;
@@ -269,16 +311,18 @@ h1 {
 
 }
 
-.itens {
-    color: #b509ff;
-    font-size: 4rem;
-}
+/* Sessao dos projetos e tech's */
 
 #section3 {
     height: 45rem;
     width: 100%;
     background-color: #09090B;
     transform: translateY(145%);
+}
+
+.itens {
+    color: #b509ff;
+    font-size: 4rem;
 }
 
 #sec3-h3 {
@@ -290,7 +334,7 @@ h1 {
     padding-top: 3rem;
 
 }
-
+ 
 #projetos {
     display: flex;
     flex-direction: row;
@@ -313,7 +357,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #101013;
+    background-color: #ffffff;
     opacity: 80%;
     transition: 0.5s;
     overflow: hidden;
@@ -464,10 +508,10 @@ h1 {
 }
 
 /* animaçao */
-#btn-projetos:hover::before {
+/* #btn-projetos:hover::before {
     left: calc(100% + 2rem);
     transition: 0.75s;
-}
+} */
 
 */ */ .linkgit {
     text-decoration: none;
@@ -603,7 +647,7 @@ h1 {
 .card {
     width: 15rem;
     height: 18rem;
-    --border-radius: 1.5rem;
+    --border-radius: 1rem;
     --border-width: 0.2rem;
     appearance: none;
     position: relative;
@@ -621,7 +665,7 @@ h1 {
 .cardjs {
     width: 15rem;
     height: 18rem;
-    --border-radius: 1.5rem;
+    --border-radius: 1rem;
     --border-width: 0.2rem;
     appearance: none;
     position: relative;
@@ -818,6 +862,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     user-select: none;
+    
 }
 
 .items h3 {
@@ -842,12 +887,14 @@ h1 {
     transition: all 300ms ease-in-out;
     z-index: -1;
     opacity: 0;
+    
 }
 
 .item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
 }
 
 
@@ -865,12 +912,14 @@ h1 {
     z-index: 2;
     opacity: 0.25;
     transform: translate(-125%, -50%);
+    
 }
 
 .item.next {
     z-index: 2;
     opacity: 0.25;
     transform: translate(25%, -50%);
+    
 }
 
 .items .button-container {
@@ -880,6 +929,7 @@ h1 {
     transform: translate(-50%, -50%);
     width: 30rem;
     z-index: 100;
+    
 }
 
 
@@ -903,11 +953,10 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 3.125rem;
-    height: 3.125rem;
+    width: 3rem;
+    height: 3rem;
     background: #9900ff;
-    clip-path: polygon(40% 0%, 40% 20%, 100% 20%, 100% 80%, 40% 80%, 40% 100%, 0% 50%);
-    
+    clip-path: polygon(40% 0%, 40% 20%, 100% 20%, 100% 80%, 40% 80%, 40% 100%, 0% 50%);  
     z-index: 99;
 }
 
@@ -917,11 +966,10 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 3.125rem;
-    height: 3.125rem;
+    width: 3rem;
+    height: 3rem;
     background: #9900ff;
     clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
-    
     z-index: 99;
 }
 
