--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -28,9 +28,7 @@
         margin-left: 5rem;
     }
 
-    header {
-        border-bottom: 1px solid #101013;
-    }
+    
 
     #img-aside {
         width: 25rem;
@@ -109,6 +107,8 @@
 
 @media screen and (max-width : 769px) {
 
+    
+    
     * {
         margin: 0;
         padding: 0;
@@ -131,10 +131,13 @@
         text-align: center;
     }
 
+    
 
     #navMenu {
         display: none;
     }
+
+    
 
 
     #logoImg {
@@ -218,6 +221,7 @@
     .items {
         top: 68rem;
         padding: 1rem;
+        
     }
 
     .items h3 {
@@ -344,11 +348,22 @@
 }
 
 @media screen and (max-width : 577px) {
-    #logoImg {
-        margin: 0;
-        margin-top: 1rem;
-        margin-right: 12rem;
+    
+.card {
         display: flex;
+        flex-direction: row;
+        gap: 10rem;
+        justify-content: center;
+        align-items: center;
+        margin: 2rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    body {
+        margin: auto;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     MAIN {
@@ -360,18 +375,32 @@
         display: flex;
     }
 
+    
+
+    #logoImg {
+        width: 100%;
+        margin: 0;
+        margin-top: 1rem;
+        margin-right: 12rem;
+        display: flex;
+    }
+
     #img-aside {
         width:15rem ;
         height: 13rem;        
         left: 5rem;
         top: 37rem;
+        
     }
 
     #sobremim {
         display: flex;
         flex-direction: column;
+        
     }
 
+    
+    
     #img-gif {
         height: 15rem;
         margin-left: 5rem;
@@ -385,6 +414,8 @@
         letter-spacing: 0rem;
         line-height: 1.5rem;
     }
+
+    
 
     .i1 {
         top: -14rem;
@@ -415,6 +446,16 @@
         left: 8rem;
         width: 4rem;
         height: 4rem;
+        
+    }
+
+    .items .button-container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 25rem;
+        z-index: 100;
         
     }
 
@@ -470,7 +511,8 @@
 
 #projetos {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column; 
+    gap: 1rem;  
 }
 
 .proje1:hover {
@@ -516,9 +558,20 @@
 
 
 }
-@media screen and (min-width : 427px) and (max-width : 500px) {
+@media screen and (min-width : 400px) and (max-width : 500px) {
+    
+    body {
+        
+        width: 100%;
+        box-sizing: border-box;
+    }
+    
     #logoImg {
         margin-right: 15rem;
+        width: 50%;
+        height: 50%;
+        margin-top: 1rem;
+        margin-left: 1.5rem;
     }
     #img-aside {
         left: 6rem; 
@@ -527,6 +580,8 @@
         margin-left: 5.8rem;
         margin-top: 2rem;  
     }
+
+
     .i1 {
         top: -13.5rem;
         left: 17rem;
@@ -558,8 +613,18 @@
         height: 4rem;
         
     }
+
+    
 }
 @media screen and (max-width : 376px) {
+    
+    body {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    
+    
     #img-aside {
         
         width:12rem ;
@@ -611,6 +676,22 @@
         width: 4rem;
         height: 4rem;
         
+    }
+
+    .button-container {
+        position: sticky;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 1rem;
+        z-index: 100;
+        
+    }
+
+    #logoImg {
+        width: 50%;
+        height: 50%;
+        margin-top: 1rem;
     }
     
 }
