--- a/css/footer.css
+++ b/css/footer.css
@@ -8,11 +8,11 @@
 .footer{
 	background: none;
 	width: 100%;
-	height:42rem;
+	height:45rem;
 	float: left;
 	font-size:1.125rem;
 	padding: 3.125rem 0.625rem 1.125rem 0.625rem;
-    transform: translateY(150%);
+    transform: translateY(140%);
 	
 }
 .footer .left{ 
@@ -194,6 +194,7 @@
     padding-left: 0.9em;
     display: flex;
     margin: auto;
+	margin-bottom: 1rem;
     border: none;
     border-radius: 16px;
     overflow: hidden;
