--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -433,7 +433,16 @@
         display: flex;
     }
 
-    
+    #text-service {
+        background-color: #09090B;
+        margin: auto;
+        margin-top: 2rem;
+        padding: 2rem;
+        width: 25rem;
+        text-align: justify;
+        color: #ffffff;
+        font-size: 1.2rem;
+    }
 
     #logoImg {
         width: 100%;
@@ -471,6 +480,7 @@
         margin-top: 20rem;
         letter-spacing: 0rem;
         line-height: 1.5rem;
+        width: inherit;
     }
 
     
@@ -697,10 +707,23 @@
         
     }
     .sec2-p {
-        width: 20rem;
-        margin-left: 2rem;
-        text-align: center;
+        width: 22rem;
+        margin-left: .8rem;
+        margin-right: 0;
+        margin-top: 16rem;
+        text-align: justify;
         letter-spacing: 0rem;
+    }
+
+    #text-service {
+        background-color: #09090B;
+        margin: auto;
+        margin-top: 2rem;
+        padding: 2rem;
+        width: 100%;
+        text-align: justify;
+        color: #ffffff;
+        font-size: 1.2rem;
     }
     #img-gif {
         
