--- a/css/footer.css
+++ b/css/footer.css
@@ -22,6 +22,11 @@
 	border-right:0; 
 	margin-bottom:1.25rem; 
     padding-bottom:1.25rem;
+	
+}
+
+.Copyright {
+	margin-bottom: 1.5rem;
 }
 .footer .title-footer {
 	color: #ffffff;
